--- a/wordele/wordele.vcxproj
+++ b/wordele/wordele.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -139,7 +139,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="best_word_selectors.h" />
     <ClInclude Include="guesses.h" />
+    <ClInclude Include="solver.h" />
     <ClInclude Include="wordlist.h" />
   </ItemGroup>
   <ItemGroup>
